Integrated control station for arbitrary APM-based unmanned vehicles
UxV-CS

(C) 2012 by Stefan Gofferje
http://stefan.gofferje.net/uxv-cs

Changelog
--------------------------------------------------------------------

---- 23feb2013
- moved FrSky telemetry decoder to own library

---- 21feb2013
- added FrSky telemetry timeout counter

---- 20feb2013
- started FrSky telemetry integration
- integrated RSSI indicators into status-bar

---- 17feb2013
- minor improvements and bugfixes

---- 10feb2013
- introduced saving of settings in EEPROM
- minor improvements and bugfixes
- worked on code readability
- added comments to code

---- 10feb2013
- added metric, imperial land and nautic display modes
- changed PFD VSI from numerical to graphical
- added status bar indicator for HEARTBEAT.custom_mode
- minor fixes
- removed all uses of String object from sketch and eDIPTFT lib
- new methods for eDIPTFT lib

---- 05feb2013
- PFD ready
- Overview page almost ready
- New functions for the EDIPTFT lib
- bugfixes
- publishes raw graphics for instruments under CC-BY-SA 3.0

---- 03feb2013
- mavlink_msg_request_data_stream implemented and WORKS
- LCD comms switched to smallprotocol

---- 01feb2013
- Basic MAVLink functionality implemented
- Basic display framework implemented

---- 13jan2013
Project start